--- a/_config.yml
+++ b/_config.yml
@@ -27,10 +27,10 @@ search: true
 # Build settings
 markdown: kramdown
 kramdown:
+  input: GFM
   math_engine: mathjax
-  syntax_highlighter_opts:
-    block:
-      line_numbers: false
+  math_engine_opts: {}
+
 remote_theme: mmistakes/minimal-mistakes
 # Outputting
 permalink: /:categories/:title/
