--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -6,5 +6,6 @@
   "trashOption": "system",
   "showUnsupportedFiles": false,
   "newLinkFormat": "absolute",
-  "alwaysUpdateLinks": true
+  "alwaysUpdateLinks": true,
+  "strictLineBreaks": false
 }
