--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Hsin-yuan Ho's Blog Website
-email: hexinyuan@stu.pku.edu.cn
+title: 天浮绿野的抽象博客
+email: 2300013136@stu.pku.edu.cn
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 twitter_username: /
-github_username: HeXY0223
+github_username: TianfuLvye
 minimal_mistakes_skin: default
 search: true
 
@@ -64,7 +64,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "He Xinyuan"
+  name   : "天浮绿野"
   avatar : "/assets/images/bio-photo.jpg"
   bio    : "信仰在空中飘扬"
   links:
@@ -73,7 +73,7 @@ author:
       url: "https://"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/HeXY0223"
+      url: "hhttps://github.com/TianfuLvye"
 
 footer:
   links:
