--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://"
+      url: "https://tianfulvye.github.io"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "hhttps://github.com/TianfuLvye"
